--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CornFlake</title>
+    <title>BackBone</title>
     <meta name="description" content="A picture all over and around a game as an overlay">
     <meta name="keywords" content="picture, overlay, game">
     <meta name="author" content="MICHAEL ANDRE FRANIATTE">
@@ -35,9 +35,9 @@
     <div id="banner"><img src="../img/favicon.jpg" /><div id="closebanner">✖</div><div id="textbanner">This website respect entirely the life privacy. No cookies are stored on any database or any file or any webbrowser.</div><div id="button1banner">I understand</div><div id="button2banner">I don't understand</div></div>
 
     <div class="top w3-center">
-        <a href="../#cornflake"><img class="logo" src="cf.png" alt="cf"></a>
+        <a href="../#cornflake"><img class="logo" src="bb.png" alt="bb"></a>
         <div class="title colored">
-            <h2>CornFlake</h2>
+            <h2>BackBone</h2>
             <h1>A Picture All Over Game</h1>
         </div>
     </div>
@@ -55,7 +55,7 @@
 
         <div class="w3-center row">
             <div class="column">
-                <img src="../img/cf-main.jpg" alt="cf-main" width="45%" height="auto" onclick='img_box("../img/cf-main.jpg")'>
+                <img src="../img/backbone-main.png" alt="cf-main" width="45%" height="auto" onclick='img_box("../img/backbone-main.png")'>
             </div>
         </div>
 
@@ -63,7 +63,7 @@
             <div class="w3-container">
                 <h3 class="w3-center colored"><b>Considerations About the Program</b></h3>
                 <p>
-                    <b>Y</b>ou shall use a GIF file, it will be a cornflake animated. The file is under assets folder where the program is. Press Keyboard keys page up to put in background and page down to put in foreground. Use keyboard key shortcuts Alt + Tab to browse windows and Alt + F4 to close current window. To see it, your game, you are playing, must be in windowed mode. For games in windowed mode but still displaying a border at top, I made a tool to remove it. To note, the page up and page down keys are used to remove/add the border at top. My source codes and program are <a href="https://github.com/michaelandrefraniatte/CornFlake">here</a>.
+                    <b>Y</b>ou shall use a GIF file, it will be a cornflake animated. The file is under assets folder where the program is. Press Keyboard keys page up to put in background and page down to put in foreground. Use keyboard key shortcuts Alt + Tab to browse windows and Alt + F4 to close current window. To see it, your game, you are playing, must be in windowed mode. For games in windowed mode but still displaying a border at top, I made a tool to remove it. To note, the page up and page down keys are used to remove/add the border at top. My source codes and program are <a href="https://github.com/michaelandrefraniatte/BackBone">here</a>.
                 </p>
             </div>
         </div>
