--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BackBone</title>
-    <meta name="description" content="A picture all over and around a game as an overlay">
+    <meta name="description" content="Havin a filter for a game as an overlay">
     <meta name="keywords" content="picture, overlay, game">
     <meta name="author" content="MICHAEL ANDRE FRANIATTE">
 
@@ -38,7 +38,7 @@
         <a href="../#cornflake"><img class="logo" src="bb.png" alt="bb"></a>
         <div class="title colored">
             <h2>BackBone</h2>
-            <h1>A Picture All Over Game</h1>
+            <h1>Filter for Gaming</h1>
         </div>
     </div>
 
@@ -46,9 +46,9 @@
 
         <div class="w3-row first-section">
             <div class="w3-container">
-                <h3 class="w3-center colored"><b>Festive Game Overlay</b></h3>
+                <h3 class="w3-center colored"><b>Filter Game Overlay</b></h3>
                 <p>
-                    <b>T</b>his program is allowing to have a custom picture all around and over game as an overlay. It can be rain or snow flakes or christmas or anniverssary fester. Let's see...
+                    <b>T</b>his program is allowing to have a filter over a game as an overlay. It can be pixelate or grayscale or whatever like blur. Let's see...
                 </p>
             </div>
         </div>
@@ -63,7 +63,7 @@
             <div class="w3-container">
                 <h3 class="w3-center colored"><b>Considerations About the Program</b></h3>
                 <p>
-                    <b>Y</b>ou shall use a GIF file, it will be a cornflake animated. The file is under assets folder where the program is. Press Keyboard keys page up to put in background and page down to put in foreground. Use keyboard key shortcuts Alt + Tab to browse windows and Alt + F4 to close current window. To see it, your game, you are playing, must be in windowed mode. For games in windowed mode but still displaying a border at top, I made a tool to remove it. To note, the page up and page down keys are used to remove/add the border at top. My source codes and program are <a href="https://github.com/michaelandrefraniatte/BackBone">here</a>.
+                    <b>Y</b>ou shall set the window title you want to display with filter in the text file named params.txt. You can choose to pixelate game or to have grayscale game. Use keyboard key shortcuts Alt + Tab to browse windows and Alt + F4 to close current window. To see it, your game, you are playing, must be in windowed mode. For games in windowed mode but still displaying a border at top, I made a tool to remove it. To note, the page up and page down keys are used to remove/add the border at top. My source codes and program are <a href="https://github.com/michaelandrefraniatte/BackBone">here</a>.
                 </p>
             </div>
         </div>
